WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21811
REGRESSION: Windows Build Not Selecting Proper Font
https://bugs.webkit.org/show_bug.cgi?id=21811
Summary
REGRESSION: Windows Build Not Selecting Proper Font
Brent Fulgham
Reported
2008-10-22 15:32:08 PDT
The attached HTML file illustrates a regression in WebKit (Windows) that affects both Cairo and CG builds. There are two code sections in the HTML page that should render using Courier (or a suitable fixed-width alternate, such as "Courier New"). Instead, Arial is selected, resulting in an incorrect rendering.
Attachments
Simple test showing the problem
(1.48 KB, text/html)
2008-10-22 15:32 PDT
,
Brent Fulgham
no flags
Details
Add back the code to verify the face name
(1.66 KB, patch)
2009-03-02 13:43 PST
,
mitz
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2008-10-22 15:32:54 PDT
Created
attachment 24575
[details]
Simple test showing the problem
mitz
Comment 2
2008-10-22 15:38:44 PDT
This was presumably broken by <
http://trac.webkit.org/changeset/31620/trunk/WebCore/platform/graphics/win/FontCacheWin.cpp
>.
Dave Hyatt
Comment 3
2008-10-22 15:58:50 PDT
The old code I wrote had this: 346 HFONT hfont = CreateFontIndirect(&winfont); 347 // Windows will always give us a valid pointer here, even if the face name is non-existent. We have to double-check 348 // and see if the family name was really used. 349 HDC dc = GetDC(0); 350 SaveDC(dc); 351 SelectObject(dc, hfont); 352 WCHAR name[LF_FACESIZE]; 353 GetTextFace(dc, LF_FACESIZE, name); 354 RestoreDC(dc, -1); 355 ReleaseDC(0, dc); 356 That's missing now I think.
mitz
Comment 4
2009-03-02 13:43:48 PST
Created
attachment 28195
[details]
Add back the code to verify the face name
Adam Roben (:aroben)
Comment 5
2009-03-02 13:49:31 PST
Comment on
attachment 28195
[details]
Add back the code to verify the face name r=me
mitz
Comment 6
2009-03-02 13:57:43 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/41366
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug