        Reviewed by Adam Roben.

- fix https://bugs.webkit.org/show_bug.cgi?id=21811
          REGRESSION: Windows Build Not Selecting Proper Font

        * platform/graphics/win/FontCacheWin.cpp:
        (WebCore::createGDIFont): Added back code to verify that the created
        HFONT has the requested face name.



Canonical link: https://commits.webkit.org/33436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41366 268f45cc-cd09-0410-ab3c-d52691b4dbfc